--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,13 +9,15 @@
 $font-main: "Montserrat", sans-serif;
 $code-font: "Roboto Mono", monospace;
 $purple: #646cff;
+$fancy-font: "Playwrite NG Modern", cursive;
+$font-color-white: rgba(255, 255, 255, 0.87);
 :root {
   font-family: $font-main;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: $font-color-white;
   background-color: #242424;
 
   font-synthesis: none;
@@ -51,16 +53,34 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.2;
   font-weight: 800;
+  text-shadow: 0 0 5px whitesmoke;
   .subtitle{
     font-family: $code-font;
     font-weight: 250;
     font-size: 0.5em;
+    text-shadow: none;
+  }
+}
+
+.navbar{
+  display: flex;
+  column-gap: 3.5rem;
+  justify-content: center;
+  position: fixed;
+  top: 6px;
+  left: 0;
+  width: 100%;
+  div p{
+    font-family: $code-font;
+    font-size: 1.4rem;
+    font-weight: 500;
   }
 }
 
@@ -86,11 +106,29 @@ h1 {
 }
 
 .reachme{
-  font-family: $font-main;
+  font-family: $fancy-font;
   font-size: 1.1rem;
-  font-weight: 600;
+  }
+
+@keyframes blink {
+    0% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    50% { text-shadow: none; }
+    100% { text-shadow: 0 0 8px rgb(240, 188, 237); }
 }
 
+@-webkit-keyframes blink {
+    0% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    50% { text-shadow: 0 0 0; }
+    100% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+}
+
+h1 {
+    -webkit-animation: blink 3.0s linear infinite;
+    -moz-animation: blink 3.0s linear infinite;
+    -ms-animation: blink 3.0s linear infinite;
+    -o-animation: blink 3.0s linear infinite;
+    animation: blink 3.0s linear infinite;
+}
 // @media (prefers-color-scheme: light) {
 //   :root {
 //     color: #213547;
