--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,9 @@ $code-font: "Roboto Mono", monospace;
 $purple: #646cff;
 $fancy-font: "Playwrite NG Modern", cursive;
 $font-color-white: rgba(255, 255, 255, 0.87);
+$lavender: rgb(182, 166, 228);
+$back-black: #242424;
+
 :root {
   font-family: $font-main;
   line-height: 1.5;
@@ -18,7 +21,7 @@ $font-color-white: rgba(255, 255, 255, 0.87);
 
   color-scheme: light dark;
   color: $font-color-white;
-  background-color: #242424;
+  background-color: $back-black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,10 +45,14 @@ a {
   font-weight: 500;
   color: white;
   text-decoration: none;
+  &:hover{
+    color: $lavender;
+  }
+  &:active{
+    color: $lavender;
+  }
 }
-// a:hover {
-//   color: $purple;
-// }
+
 
 body {
   margin: 0;
@@ -62,8 +69,9 @@ h1 {
   font-weight: 800;
   text-shadow: 0 0 5px whitesmoke;
   .subtitle{
+    color: $lavender;
     font-family: $code-font;
-    font-weight: 250;
+    font-weight: 350;
     font-size: 0.5em;
     text-shadow: none;
   }
@@ -98,9 +106,13 @@ h1 {
       font-size: 1.8rem;
       transition: all 0.3s ease;
     }
+    .fa-envelope{
+      font-size: 1.8rem;
+      transition: all 0.3s ease;
+    }
     i:hover{
       transform: scale(1.1);
-      text-shadow: 0 0 10px #896899, 0 0 20px #af7ce9, 0 0 25px #956daf;
+      text-shadow: 0 0 10px #bea5ca, 0 0 15px #9e74ce, 0 0 20px #5b4968;
     }
   }
 }
@@ -111,23 +123,39 @@ h1 {
   }
 
 @keyframes blink {
-    0% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    0% { text-shadow: 0 0 8px $lavender }
     50% { text-shadow: none; }
-    100% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    100% { text-shadow: 0 0 8px $lavender }
 }
 
 @-webkit-keyframes blink {
-    0% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    0% { text-shadow: 0 0 8px $lavender; }
     50% { text-shadow: 0 0 0; }
-    100% { text-shadow: 0 0 8px rgb(240, 188, 237); }
+    100% { text-shadow: 0 0 8px $lavender; }
 }
 
-h1 {
-    -webkit-animation: blink 3.0s linear infinite;
-    -moz-animation: blink 3.0s linear infinite;
-    -ms-animation: blink 3.0s linear infinite;
-    -o-animation: blink 3.0s linear infinite;
-    animation: blink 3.0s linear infinite;
+h1, .reachme {
+    -webkit-animation: blink 3.0s ease-in infinite;
+    -moz-animation: blink 3.0s ease-in infinite;
+    -ms-animation: blink 3.0s ease-in infinite;
+    -o-animation: blink 3.0s ease-in infinite;
+    animation: blink 3.0s ease-in infinite;
+}
+
+.about{
+  display: flex;
+  .img-container{
+    img{
+      border-radius: 15px;
+    }
+  }
+  column-gap: 20px;
+}
+
+#about-me{
+  font-family: $code-font;
+  font-size: 1.3rem;
+  font-weight: 300;
 }
 // @media (prefers-color-scheme: light) {
 //   :root {
