--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,7 +31,6 @@ $back-black: #242424;
 
 .App{
   @include flexColumn();
-  min-height: 100vh;
   justify-content: center;
 }
 
@@ -60,7 +59,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 h1 {
@@ -92,11 +90,13 @@ h1 {
   }
 }
 
+
+
 .footer{
   @include flexColumn();
   row-gap: 12px;
   position: relative;
-  top: 8rem;
+  top: 7rem;
   
   .icons{
     display: flex;
@@ -145,18 +145,37 @@ h1, .reachme {
 .about{
   display: flex;
   .img-container{
+    align-content: center;
     img{
       border-radius: 15px;
+      box-shadow: 0 5px 8px rgb(0, 0, 0), 0 6px 20px rgb(0, 0, 0);
     }
   }
-  column-gap: 20px;
+
+  text-align: left;
+  .about-text{
+    align-content: center;
+    padding-left: 40px;
+    #about-me{
+      font-family: $code-font;
+      font-size: 1.35rem;
+      font-weight: 300;
+      margin-top: 0;
+      float: left;
+    }
+  }
 }
 
-#about-me{
-  font-family: $code-font;
-  font-size: 1.3rem;
-  font-weight: 300;
+
+@media screen and (max-width: 1399px){
+  #about-me{
+    font-size: 1.2rem;
+  }
+  .footer{
+    top: 5.5rem;
+  }
 }
+
 // @media (prefers-color-scheme: light) {
 //   :root {
 //     color: #213547;
